<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:background="@color/layout_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvResult"
        android:layout_width="350dp"
        android:layout_height="185dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="55dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/cvWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvIndex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#252323"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/normal"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/text_hint"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvWeight"
        android:layout_width="350dp"
        android:layout_height="140dp"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/cvHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/text_hint"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.057"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.15" />

            <EditText
                android:id="@+id/etWeight"
                android:layout_width="128dp"
                android:layout_height="79dp"
                android:ems="10"
                android:hint="@string/_0_0"
                android:inputType="number"
                android:textColor="@color/button_color"
                android:textColorHint="@color/text_hint"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWeight"
                app:layout_constraintVertical_bias="0.428" />

            <TextView
                android:id="@+id/tvKG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg"
                android:textColor="@color/text_hint"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/etWeight"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.943" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHeight"
        android:layout_width="350dp"
        android:layout_height="140dp"
        android:layout_marginTop="260dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/text_hint"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.057"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.15" />

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="128dp"
                android:layout_height="79dp"
                android:ems="10"
                android:hint="@string/_0"
                android:inputType="numberDecimal"
                android:textColor="@color/button_color"
                android:textColorHint="@color/text_hint"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeight"
                app:layout_constraintVertical_bias="0.428" />

            <TextView
                android:id="@+id/tvCm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cm"
                android:textColor="@color/text_hint"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/etHeight"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.943" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="280dp"
        android:layout_height="66dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#1EB6C3"
        android:elevation="15dp"
        android:text="@string/calculate"
        android:textColor="@color/design_default_color_background"
        android:textSize="34sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvHeight"
        app:layout_constraintVertical_bias="0.911" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="cvResult" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="cvHeight" />


</androidx.constraintlayout.widget.ConstraintLayout>